WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39718
[GTK] Dragging onto the desktop causes a critical GLib warning
https://bugs.webkit.org/show_bug.cgi?id=39718
Summary
[GTK] Dragging onto the desktop causes a critical GLib warning
Martin Robinson
Reported
2010-05-26 03:18:50 PDT
The error is: (GtkLauncher:25906): GLib-GObject-CRITICAL **: g_object_ref: assertion `G_IS_OBJECT (object)' failed
Attachments
Patch
(1.59 KB, patch)
2010-05-26 03:24 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2010-05-26 03:24:41 PDT
Created
attachment 57085
[details]
Patch
Xan Lopez
Comment 2
2010-05-27 01:09:18 PDT
Comment on
attachment 57085
[details]
Patch OK.
WebKit Commit Bot
Comment 3
2010-05-27 05:24:24 PDT
Comment on
attachment 57085
[details]
Patch Rejecting patch 57085 from commit-queue. Failed to run "[u'/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/svn-apply', u'--reviewer', u'Xan Lopez', u'--force']" exit_code: 1 Parsed 2 diffs from patch file(s). patching file WebKit/gtk/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file WebKit/gtk/webkit/webkitwebview.cpp Hunk #1 FAILED at 1257. 1 out of 1 hunk FAILED -- saving rejects to file WebKit/gtk/webkit/webkitwebview.cpp.rej Full output:
http://webkit-commit-queue.appspot.com/results/2561016
Martin Robinson
Comment 4
2010-05-27 08:14:31 PDT
Comment on
attachment 57085
[details]
Patch Whoops. This was already comitted. Clearing flags.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug