[GTK] Dragging onto the desktop causes a critical GLib warning https://bugs.webkit.org/show_bug.cgi?id=39718

Reviewed by Xan Lopez.

Only increment the window reference count if it is not null during drag-end
signal processing.

* webkit/webkitwebview.cpp:
(webkit_web_view_drag_end): Guard against null window values.

Canonical link: https://commits.webkit.org/51335@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60284 268f45cc-cd09-0410-ab3c-d52691b4dbfc